#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(libdirecpp, 0.1.2, jtmonegro@gmail.com)
AM_INIT_AUTOMAKE(libdirecpp, 0.1.2)

AC_CONFIG_SRCDIR(src/direcpp.cpp)
AC_CONFIG_HEADERS([config.h])

AC_PROG_CXX
AC_CANONICAL_SYSTEM
AC_PROG_LIBTOOL

AC_OUTPUT(Makefile src/Makefile)
